# browser-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
deliverables/: github-checks.md
docs/: 00_project_overview_summary.md  01_requirements_prd.md  02_repo_scaffold.md  03_architecture.md  04_playbooks.md  05_claude_code_workflow.md  06_prompts_and_checklists.md  README.md
examples/: README.md  attendees.csv  code_recency.csv  github_checks.csv  github_input.csv  mock_pr.html  mock_pr_checks.html  tickets_input.csv  wikipedia_citations.csv
examples/github_checks_outputs/: report.md  results.csv  run_log.jsonl  run_manifest.json
examples/tasks/: code-recency.yaml  github-checks.yaml  wikipedia-citations.yaml
src/evidence_collector/: __init__.py  cli.py  config.py
src/evidence_collector/adapters/: __init__.py  browser.py  github.py  jira_like.py  linkedin.py
src/evidence_collector/agent/: __init__.py  audit.py  loop.py  planner.py  prompts.py  report.py  (+3 more)
tests/: conftest.py  test_audit.py  test_base_runner.py  test_browser.py  test_chat_planner.py  test_cli.py  test_code_recency_runner.py  test_config.py  test_csv_utils.py  test_extraction.py  test_github_adapter.py  test_github_adapter_blame.py  test_github_checks_runner.py  test_loop.py  test_manifest.py  test_naming.py  test_progress.py  test_prompts.py  test_retry.py  test_session.py  test_spreadsheets.py  test_step_runner.py  test_task.py  test_text.py  test_throttling.py  test_tickets_runner.py  test_time.py  test_tools.py
tests/fixtures/: code_recency_input.csv  github_checks_input.csv
tests/manual/: dump_github_dom.py  github_checks_demo.csv  test_browser_visual.py
(+38 files in other folders)
