[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "evidence-collector"
version = "0.1.0"
description = "Browser-based audit evidence collection agent"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "playwright>=1.40",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "pydantic>=2.5",
    "aiohttp>=3.9",
    "anthropic>=0.39",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
web = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
]

[project.scripts]
evidence-collector = "evidence_collector.cli:app"
evidence-web = "evidence_collector.web.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/manual"
asyncio_mode = "strict"
